[package]
name = "ngl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
wson = "0.1.1"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "nom_compare"
harness = false