[package]
name = "ngl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
askama = "0.12.0"

[dev-dependencies]
criterion = "0.5.1"
wson = "0.1.1"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "nom_compare"
harness = false